--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Runs tests
+        run: npm run test
+        
       - name: Build Vite project
         run: npm run build
 
